Fix radio button positioning on Firefox (#2805)
Remove the top: 6px since it's unnecessary
to vertically align the dot in the radio
button.

CORL-873

--- a/src/core/client/ui/components/v2/RadioButton/RadioButton.css
+++ b/src/core/client/ui/components/v2/RadioButton/RadioButton.css
@@ -73,7 +73,6 @@
   border-radius: 50%;
   position: absolute;
   left: 3px;
-  top: 6px;
   width: 8px;
   height: 8px;
   box-sizing: border-box;
